--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <link rel="canonical" href="https://totowayang.zra.com/">
+    <link rel="canonical" href="http://totowayang.zra.com/">
      <link rel="amphtml" href="https://exit5722.com/totowayang/-/3/">
      <meta name="google-site-verification" content="RGAJ_l7ifnIU_upgdXdokcN62aH0sFzm8dok6ZGCiRA" />
      <link rel="icon" type="image/png" href="https://images2.imgbox.com/a5/58/hGuRuxHu_o.png">
@@ -21,7 +21,7 @@
     
 
 <meta property="og:site_name" content="CASATOTO - RTP Live 100% Jackpot Situs Judi Slot Gacor X500">
-<meta property="og:url" content="https://totowayang.zra.com/">
+<meta property="og:url" content="http://totowayang.zra.com/">
 <meta property="og:title" content="CASATOTO - RTP Live 100% Jackpot Situs Judi Slot Gacor X500">
 <meta property="og:type" content="product">
 <meta property="og:description" content="CASATOTO dengan bocoran slot gacor paling komplit di Rtp slot terakurat. Terimakasi untuk kunjungan anda ke situs Casatoto dan Salam Jackpot.">
@@ -37,7 +37,7 @@
     <script src="//19c785-3.myshopify.com/cdn/shop/t/2/assets/constants.js?v=58251544750838685771703934531" defer="defer"></script>
     <script src="//19c785-3.myshopify.com/cdn/shop/t/2/assets/pubsub.js?v=158357773527763999511703934531" defer="defer"></script>
     <script src="//19c785-3.myshopify.com/cdn/shop/t/2/assets/global.js?v=113367515774722599301703934531" defer="defer"></script><script src="//19c785-3.myshopify.com/cdn/shop/t/2/assets/animations.js?v=88693664871331136111703934530" defer="defer"></script><script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/85055996186/digital_wallets/dialog">
-<link rel="alternate" type="application/json+oembed" href="https://totowayang.zra.com/.oembed">
+<link rel="alternate" type="application/json+oembed" href="http://totowayang.zra.com/.oembed">
 <script async="async" src="/checkouts/internal/preloads.js?permanent-domain=19c785-3.myshopify.com&locale=en-ID"></script>
 <script id="shopify-features" type="application/json">{"accessToken":"3dcb739e4d6a226be12e1cb7f22b9146","betas":["rich-media-storefront-analytics"],"domain":"19c785-3.myshopify.com","predictiveSearch":true,"shopId":85055996186,"smart_payment_buttons_url":"https:\/\/19c785-3.myshopify.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/spb.en.js","dynamic_checkout_cart_url":"https:\/\/19c785-3.myshopify.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/dynamic-checkout-cart.en.js","locale":"en","optimusEnabled":true,"optimusHidden":false,"betterDynamicCheckoutRecommendationVariant":"control","shopPromisePDPV3Enabled":true}</script>
 <script>var Shopify = Shopify || {};
@@ -1779,7 +1779,7 @@ Item added to your cart
           type="text"
           class="field__input"
           id="ShareUrl-template--21841376444698__main"
-          value="https://totowayang.zra.com/"
+          value="http://totowayang.zra.com/"
           placeholder="Link"
           onclick="this.select();"
           readonly
